[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/player/PlayerStand.png" type="Texture" id=1]
[ext_resource path="res://images/player/PlayerWalk.png" type="Texture" id=2]
[ext_resource path="res://images/player/PlayerWalk1_1.png" type="Texture" id=3]
[ext_resource path="res://images/player/Shatter.png" type="Texture" id=4]
[ext_resource path="res://objects/Player.gd" type="Script" id=5]
[ext_resource path="res://images/player/Jump.png" type="Texture" id=6]
[ext_resource path="res://images/player/Fall.png" type="Texture" id=7]
[ext_resource path="res://objects/SlashAttack.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/Flower.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/AnvilStomp.tscn" type="PackedScene" id=10]
[ext_resource path="res://objects/Beachball.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/shards/PlayerShards.tscn" type="PackedScene" id=12]
[ext_resource path="res://objects/Floppydisk.tscn" type="PackedScene" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 0.1
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Shatter",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 44.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 52, 36 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )
attack = ExtResource( 8 )
shard = ExtResource( 12 )
beachball = ExtResource( 11 )
flower = ExtResource( 9 )
anvil_stomp = ExtResource( 10 )
floppy_disk = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 11, -37 )
frames = SubResource( 1 )
offset = Vector2( 0, -1.032 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MushroomStomp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MushroomStomp"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 50 )
shape = SubResource( 3 )

[node name="FeetPos" type="Position2D" parent="."]
position = Vector2( 0, 35 )

[node name="BallAimPos" type="Position2D" parent="."]
position = Vector2( 0, -156 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.748
one_shot = true

[node name="WateringCanTimer" type="Timer" parent="."]
wait_time = 0.416
autostart = true

[connection signal="body_entered" from="MushroomStomp" to="." method="_on_MushroomStomp_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="WateringCanTimer" to="." method="_on_WateringCanTimer_timeout"]
